# models/models.go
@@ -1,11 +1,12 @@
 package models
 
 import (
-	"go-gin-example/pkg/logging"
 	"fmt"
 	"github.com/jinzhu/gorm"
 	_ "github.com/jinzhu/gorm/dialects/mysql"
+	"go-gin-example/pkg/logging"
 	"go-gin-example/pkg/setting"
+	"time"
 )
 
 // https://eddycjy.com/posts/go/gin/2018-02-11-api-01/
@@ -19,9 +20,37 @@ type Model struct {
 	ID int `gorm:"primary_key" json:"id"`
 	CreatedOn int `json:"created_on"`
 	ModifiedOn int `json:"modified_on"`
+	DeletedOn int `json:"deleted_on"`
 }
 
+// Setup initializes the database instance
+func Setup() {
+	var err error
+	db, err = gorm.Open(setting.DatabaseSetting.Type,
+		fmt.Sprintf("%s:%s@tcp(%s)/%s?charset=utf8mb4&parseTime=True&loc=Local",
+		setting.DatabaseSetting.User,
+		setting.DatabaseSetting.Password,
+		setting.DatabaseSetting.Host,
+		setting.DatabaseSetting.Name))
 
+	if err != nil {
+		logging.Error(err)
+	}
+
+	gorm.DefaultTableNameHandler = func(db *gorm.DB, defaultTableName string) string {
+		return setting.DatabaseSetting.TablePrefix + defaultTableName
+	}
+
+	db.SingularTable(true)
+	// 注册 Callbacks
+	db.Callback().Create().Replace("gorm:update_time_stamp", updateTimeStampForCreateCallback)
+	db.Callback().Update().Replace("gorm:upate_time_stamp", updateTimeStampForUpdateCallback)
+	db.Callback().Delete().Replace("gorm:delete", deleteCallback)
+	db.DB().SetMaxIdleConns(10)
+	db.DB().SetMaxOpenConns(100)
+}
+
+/*
 func init(){
 	var (
 		dbType, dbName, user, password, host, tablePrefix string
@@ -57,9 +86,80 @@ func init(){
 	db.LogMode(true)
 	db.DB().SetMaxIdleConns(10)
 	db.DB().SetMaxOpenConns(100)
+
+	// 注册 Callbacks
+	db.Callback().Create().Replace("gorm:update_time_stamp", updateTimeStampForCreateCallback)
+	db.Callback().Update().Replace("gorm:upate_time_stamp", updateTimeStampForUpdateCallback)
+	db.Callback().Delete().Replace("gorm:delete", deleteCallback)
 }
+
+ */
 
 // 关闭数据库
 func CloseDB() {
 	defer db.Close()
+}
+
+// 实现Callbacks
+func updateTimeStampForCreateCallback(scope *gorm.Scope) {
+	if !scope.HasError() {
+		nowTime := time.Now().Unix()
+		if createTimeField, ok := scope.FieldByName("CreatedOn"); ok {
+			if createTimeField.IsBlank {
+				createTimeField.Set(nowTime)
+			}
+		}
+		if modifyTimeField, ok := scope.FieldByName("ModifiedOn"); ok {
+			if modifyTimeField.IsBlank {
+				modifyTimeField.Set(nowTime)
+			}
+		}
+	}
+}
+
+
+func updateTimeStampForUpdateCallback(scope *gorm.Scope) {
+	// scope.Get(...) 根据入参获取设置了字面值的参数，例如本文中是 gorm:update_column ，它会去查找含这个字面值的字段属性
+	if _, ok := scope.Get("gorm:update_column"); !ok{
+		// scope.SetColumn(...) 假设没有指定 update_column 的字段，我们默认在更新回调设置 ModifiedOn 的值
+		scope.SetColumn("ModifiedOn", time.Now().Unix())
+	}
+}
+
+func deleteCallback(scope *gorm.Scope) {
+	if !scope.HasError() {
+		var extraOption string
+		// scope.Get("gorm:delete_option") 检查是否手动指定了 delete_option
+		if str,ok := scope.Get("gorm:delete_option"); ok {
+			extraOption = fmt.Sprint(str)
+		}
+
+		// scope.FieldByName("DeletedOn") 获取我们约定的删除字段，若存在则 UPDATE 软删除，若不存在则 DELETE 硬删除
+		deletedOnField, hasDeletedOnField := scope.FieldByName("DeletedOn")
+
+		if !scope.Search.Unscoped && hasDeletedOnField {
+			scope.Raw(fmt.Sprintf(
+				"UPDATE %v SET %v=%v%v%v",
+				scope.QuotedTableName(), 	// scope.QuotedTableName() 返回引用的表名，这个方法 GORM 会根据自身逻辑对表名进行一些处理
+				scope.Quote(deletedOnField.DBName),
+				scope.AddToVars(time.Now().Unix()),	 // scope.AddToVars 该方法可以添加值作为 SQL 的参数，也可用于防范 SQL 注入
+				addExtraSpaceIfExist(scope.CombinedConditionSql()),	// scope.CombinedConditionSql() 返回组合好的条件 SQL，看一下方法原型很明了
+				addExtraSpaceIfExist(extraOption),
+				)).Exec()
+		} else {
+			scope.Raw(fmt.Sprintf(
+				"DELETE FROM %v%v%v",
+				scope.QuotedTableName(),
+				addExtraSpaceIfExist(scope.CombinedConditionSql()),
+				addExtraSpaceIfExist(extraOption),
+				)).Exec()
+		}
+	}
+}
+
+func addExtraSpaceIfExist(str string) string{
+	if str != "" {
+		return " " + str
+	}
+	return ""
 }
